# ai-gate

./: .gitignore  .gitmodules  BETA_PROGRAM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT.md  DOCUMENTATION_AUDIT.md  LICENSE  LICENSE-Docs  README.md  ROADMAP.md  SECRETS_STORE_SETUP.md  SECURITY.md  STAGING_CUSTOM_DOMAIN.md  STAGING_IMPROVEMENTS.md  STAGING_STATUS.md  STRIPE_TEST_PRODUCTION.md  SUPPORT.md  TODO-DASHBOARD.md  TRADEMARKS.md  VAULT-ONLY-MIGRATION.md  create-stripe-product.js  package-lock.json  package.json
.claude/: instructions.md
.continue/agents/: new-agent.yaml
.continue/rules/: front-metrics-parser-centralization.md  frontend-api-base-handling.md  luna-proxy-claude-workflow.md  web-ci-via-github-actions.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  continue-ci.yml  dco.yml  label-sync.yml  release-drafter.yml
docs/: DEPLOYMENT-SUMMARY-SESSION-PRICING.md  NEXT-STEPS.md  PRICING-MIGRATION-SESSIONS.md  README.md  RESUME-CONVERSATION.txt  STRIPE-PRODUCTS-MANUAL-SETUP.md
scripts/: README.md  deploy.sh  github-admin-setup.sh  smoke-staging.sh  stripe-bootstrap.sh  stripe-create-products.sh  stripe-export-ids.sh  stripe-export-secrets-sessions.sh  stripe-export-secrets.sh  stripe-ids-sessions.live.json  stripe-ids-sessions.test.json  stripe-setup-sessions.sh  stripe-setup-simple.sh  stripe-webhook-setup.sh
sdks/: README.md  TESTING_GUIDE.md
sdks/python/: .gitignore  README.md  pyproject.toml  test_local.py
sdks/python/ai_gate/: __init__.py  client.py  types.py
sdks/python/examples/: async_example.py  basic.py
(+30 files in other folders)
